# MARVELO

./: .gitignore  Makefile  README.md  license-2.0.md  setup.py
Documentation/: MARVELO_tut_v1.pptx
Documentation/Tutorials/: Example1.md  Example2.md  Example3.md  Readme.md  task1.py  task1.xml  task2.xml  task2a.py  task2b.py  task3.xml  task3a.py  task3b.py
Documentation/marvelo_example/: README.md  convertResults.py  gen_randParam_modified.py  multiGraphVNEPower.py  multiGraphVNEPower_Updated.py
ansible/: sites.yml
asn_daemon/: daemon.py  interfacesExamle
asn_server/: .asn_history  activateMonitoring.py  clearDB.py  clearSripts.py  debugwindow.py  read_xml.py  server.py
asn_server/Testbench/system/asnnode6/src/: CMakeLists.txt  Makefile  cmake_install.cmake  pipeExampleC.cpp  rpiserver.cpp
asn_server/ansible/: ansible.cfg  cust_setup_clients.retry  cust_setup_clients.yaml  daemon_service_disable.yaml  daemon_service_enable.yaml  distribute_daemon.yaml  hosts  internet_forwarding_disable.yaml  internet_forwarding_enable.yaml  reset_server_iptables.yaml  setup_clients.retry  setup_clients.yaml  setup_new_client.yaml  (+3 more)
csv_files/: dxcp_delay.tex  dxcp_delay.tikz  ica_delay.tex  ica_delay.tikz  plot_helper.py  read_csv.py  read_csv_check.py
docs/: Makefile  development.rst  index.rst
example_networks/: .config.py.swp  Makefile  manage.py  simulate_demo.py
fission/: build.py  cmd.py  emulate.py  loader.py  manager.py  test.py  visualize.py
fission.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_remote_synchronization.py
(+600 files in other folders)
